2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c: draw in spans of tile height.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print.[ch]: don't set the resolution and unit on
	the image, only initialize the dialog with these values.

2006-12-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpimagemaptool.c (gimp_image_map_tool_load_save):
	show a message in the statusbar when settings are saved.

2006-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tileit.c: corrected label (bug #389779).

2006-12-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print: minor cleanups.

	* plug-ins/print/print-page-layout.c: cleanup up GUI code.

	* plug-ins/print/print-settings.c (check_version): check keyfile
	before accessing it. Cleaned up error handling.

2006-12-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c
	* plug-ins/print/print.c: formatting, minor cleanups, untabified.

2006-12-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimplayertreeview.c
	(gimp_layer_tree_view_set_context): don't do stuff on NULL mask
	view renderers. Fixes bug #389307.

2006-12-24  Mukund Sivaraman  <muks@mukund.org>

	* app/core/Makefile.am
	* app/core/gimp-transform-resize.c
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpdrawable-transform.h
	* app/core/gimpdrawable.c
	* app/core/gimpimage-item-list.c
	* app/core/gimpimage-item-list.h
	* app/core/gimpitem-linked.c
	* app/core/gimpitem-linked.h
	* app/core/gimpitem.c
	* app/core/gimpitem.h
	* app/core/gimplayer.c
	* app/pdb/drawable_transform_cmds.c
	* app/text/gimptextlayer-transform.c
	* app/text/gimptextlayer-transform.h
	* app/tools/gimptransformoptions.c
	* app/tools/gimptransformtool.c
	* app/vectors/gimpvectors.c
	* libgimp/gimpdrawabletransform_pdb.c
	* libgimp/gimpdrawabletransform_pdb.h