@@ -1,5 +1,13 @@
 2006-12-27  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/print/print-draw-page.c: paint the background in white.
+	Show progress, use a tile cache.
+
+	* plug-ins/print/print.c: removed broken custom preview
+	implementation.
+
+2006-12-27  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/print/print-draw-page.c: draw in spans of tile height.
 
 2006-12-27  Sven Neumann  <sven@gimp.org>
